// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render (Flex) gap 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-arwd12"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render as link (href) 1`] = `
<a
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  href="#"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</a>
`;

exports[`props should render correctly 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render disabled 1`] = `
<button
  aria-busy="false"
  aria-disabled="true"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  disabled=""
  style="pointer-events: none;"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render elevation 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-9spiy4"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render hasCaret 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
    <span
      class="wp-components-flex-item css-1q3njc2"
      data-g2-c16t="true"
      data-g2-component="ButtonCaret"
    >
      <div
        class="wp-components-icon css-1k4as4"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="16"
          size="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render icon 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="true"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-nlyp56"
      data-g2-c16t="true"
      data-g2-component="ButtonIcon"
    >
      <div
        class="wp-components-icon css-1k4as4"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg />
      </div>
    </span>
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render isControl 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-782ngo"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render isDestructive 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1k9nu1y"
  data-destructive="true"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render isLoading 1`] = `
<button
  aria-busy="true"
  aria-disabled="true"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  disabled=""
  style="pointer-events: none;"
  type="button"
>
  <div
    aria-hidden="true"
    class="wp-components-flex css-1epvfzc"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <div
      aria-busy="true"
      class="wp-components-spinner css-ee8emf"
      data-g2-c16t="true"
      data-g2-component="Spinner"
      style="height: 16px; width: 16px;"
    >
      <div
        aria-hidden="true"
        class="css-pq0fgq"
        style="transform: scale(0.4444444444444444);"
      >
        <div
          class="css-1rq9pxc"
          style="color: currentColor;"
        >
          <div
            class="InnerBar1"
          />
          <div
            class="InnerBar2"
          />
          <div
            class="InnerBar3"
          />
          <div
            class="InnerBar4"
          />
          <div
            class="InnerBar5"
          />
          <div
            class="InnerBar6"
          />
          <div
            class="InnerBar7"
          />
          <div
            class="InnerBar8"
          />
          <div
            class="InnerBar9"
          />
          <div
            class="InnerBar10"
          />
          <div
            class="InnerBar11"
          />
          <div
            class="InnerBar12"
          />
        </div>
      </div>
    </div>
  </div>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-wd9by"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render isNarrow 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-h9c22o"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render isRounded 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1tgvkvh"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render isSubtle 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-40qkzu"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render prefix 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-nlyp56"
      data-g2-c16t="true"
      data-g2-component="ButtonPrefix"
    >
      <span>
        Let
      </span>
    </span>
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render size 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-sgcvey"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render suffix 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1kiyg7d"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
    <span
      class="wp-components-flex-item css-nlyp56"
      data-g2-c16t="true"
      data-g2-component="ButtonSuffix"
    >
      <span>
        Let
      </span>
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render variant 1`] = `
<button
  aria-busy="false"
  class="wp-components-base-button wp-components-button css-1x8lw6z"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-flex css-19zk68e"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-18097f7"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Let It Go
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;
